--- a/PoiTransport/working_desk.ipynb
+++ b/PoiTransport/working_desk.ipynb
@@ -57,7 +57,8 @@
     "# 각 시트 데이터 확인\n",
     "print(time_slots.head())\n",
     "print(drivers.head())\n",
-    "print(buses.head())"
+    "print(buses.head())\n",
+    "\n"
    ]
   },
   {
@@ -217,7 +218,8 @@
     "                '버스ID': 'N/A'\n",
     "            })\n",
     "    print(work_count)\n",
-    "    return pd.DataFrame(assignments)\n"
+    "    return pd.DataFrame(assignments)\n",
+    "\n"
    ]
   },
   {
@@ -236,7 +238,8 @@
    "source": [
     "################################\n",
     "# 배차 수행\n",
-    "schedule = V1_assign_shifts(time_slots, drivers, buses)"
+    "schedule = V1_assign_shifts(time_slots, drivers, buses)\n",
+    "\n"
    ]
   },
   {
@@ -258,12 +261,13 @@
     "output_path = r'C:\\Users\\user\\PoiTransport\\배차시간표.xlsx'\n",
     "schedule.to_excel(output_path, index=False)\n",
     "\n",
-    "print(\"배차 시간표가 성공적으로 생성되었습니다.\")"
+    "print(\"배차 시간표가 성공적으로 생성되었습니다.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +281,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_15084\\1871055250.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_12552\\4271008141.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  schedule.fillna(value='',inplace=True)\n"
      ]
     }
@@ -292,8 +296,8 @@
     "from openpyxl.styles import Font, Alignment\n",
     "\n",
     "# 파일 경로 지정\n",
-    "schedule_path = r'C:\\Users\\user\\PoiTransport\\배차시간표.xlsx'\n",
-    "drivers_path = r'C:\\Users\\user\\PoiTransport\\운전자정보.xlsx'\n",
+    "schedule_path = r'C:\\Users\\user\\poi\\PoiTransport\\배차시간표.xlsx'\n",
+    "drivers_path = r'C:\\Users\\user\\poi\\PoiTransport\\운전자정보.xlsx'\n",
     "\n",
     "# 엑셀 파일 읽기\n",
     "schedule = pd.read_excel(schedule_path)\n",
@@ -307,7 +311,7 @@
     "# 운전자 이름 결측값 ''로 대체\n",
     "schedule.fillna(value='',inplace=True)\n",
     "\n",
-    "def create_calendar_excel_format(schedule):\n",
+    "def create_calendar_excel_format1(schedule):\n",
     "    # 운전자 이름을 날짜와 시간에 맞춰서 피벗\n",
     "    pivot_table = schedule.pivot(index= '순번', columns=['날짜','월','일','요일','시간'], values='운전자')\n",
     "    \n",
@@ -320,14 +324,14 @@
     "    return pivot_table\n",
     "\n",
     "# 달력 형식으로 변환\n",
-    "calendar_format = create_calendar_excel_format(schedule)\n",
+    "calendar_format1 = create_calendar_excel_format1(schedule)\n",
     "\n",
-    "sorted_calendar_format = calendar_format.apply(lambda x: sorted(x))\n",
+    "sorted_calendar_format = calendar_format1.apply(lambda x: sorted(x))\n",
     "\n",
-    "sorted_df = calendar_format.apply(lambda x: sorted(x))\n",
+    "sorted_df = calendar_format1.apply(lambda x: sorted(x))\n",
     "\n",
     "# 파일 경로 지정\n",
-    "output_path = r'C:\\Users\\user\\PoiTransport\\달력배차표.xlsx'\n",
+    "output_path = r'C:\\Users\\user\\poi\\PoiTransport\\달력배차표.xlsx'\n",
     "\n",
     "# 새로운 워크북 생성\n",
     "wb = Workbook()\n",
@@ -393,12 +397,168 @@
     "# 엑셀 파일로 저장\n",
     "wb.save(output_path)\n",
     "\n",
-    "print(\"달력 형식의 배차 시간표가 성공적으로 생성되었습니다.\")\n"
+    "print(\"달력 형식의 배차 시간표가 성공적으로 생성되었습니다.\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "일  1                 2                   3        ...   29              30  \\\n",
+      "요일  일       화         수         월         목       ...    목       일       금   \n",
+      "시간 오전 오후   오전   오후   오전   오후   오전   오후   오전   오후  ...   오전   오후 오전 오후   오전   \n",
+      "순번                                                ...                        \n",
+      "1         김현진  강형철  김현진  강형철  김현진  김민성  김현진  강형철  ...  강형철  김현진        강형철   \n",
+      "2         박준서  김민성  박준서  김종열  박준서  김종열  박준서  김민성  ...  김민성  박준서        김민성   \n",
+      "3         안병준  김진수  안병준  김진수  안병준  김진수  안병준  김종열  ...  김종열  안병준        김진수   \n",
+      "4         양귀선  민경오  양귀선  민경오  양귀선  민경오  양귀선  김진수  ...  김진수  양귀선        민경오   \n",
+      "5         이동규  이상준  이동규  이상준  이동규  이상준  이동규  이상준  ...  이상준  이동규        이상준   \n",
+      "6         이명재  조예찬  이명재  조예찬  이명재  조예찬  이명재  조예찬  ...  조예찬  이명재        조예찬   \n",
+      "\n",
+      "일                 31     \n",
+      "요일         월       토     \n",
+      "시간   오후   오전   오후 오전 오후  \n",
+      "순번                       \n",
+      "1   김현진  김현진  강형철        \n",
+      "2   박준서  박준서  김민성        \n",
+      "3   안병준  안병준  김종열        \n",
+      "4   양귀선  양귀선  김진수        \n",
+      "5   이동규  이동규  민경오        \n",
+      "6   이명재  이명재  이상준        \n",
+      "\n",
+      "[6 rows x 100 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_12552\\2202511477.py:22: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  schedule.fillna(value='',inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "################################\n",
+    "## 배차시간표를 시각화된 엑셀로 변환.\n",
+    "\n",
+    "from openpyxl import Workbook\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "from openpyxl.styles import Font, Alignment\n",
+    "\n",
+    "# 파일 경로 지정\n",
+    "schedule_path = r'C:\\Users\\user\\poi\\PoiTransport\\배차시간표.xlsx'\n",
+    "drivers_path = r'C:\\Users\\user\\poi\\PoiTransport\\운전자정보.xlsx'\n",
+    "\n",
+    "# 엑셀 파일 읽기\n",
+    "schedule = pd.read_excel(schedule_path)\n",
+    "drivers = pd.read_excel(drivers_path)\n",
+    "\n",
+    "# 운전자ID를 운전자 이름으로 대체\n",
+    "schedule = schedule.merge(drivers[['운전자ID', '운전자이름']], on='운전자ID', how='left')\n",
+    "schedule.drop('운전자ID', axis=1, inplace=True)\n",
+    "schedule = schedule.rename(columns={'운전자이름': '운전자'})\n",
+    "\n",
+    "schedule.fillna(value='',inplace=True)\n",
+    "\n",
+    "def create_calendar_excel_format2(schedule):\n",
+    "    # 운전자 이름을 날짜와 시간에 맞춰서 피벗\n",
+    "    ns = schedule.drop(['날짜','월','주차','버스ID'],axis = 1)\n",
+    "    pivot_table = ns.pivot(index= '순번', columns=['일','요일','시간'], values='운전자')\n",
+    "    \n",
+    "    # 운전자 이름이 인덱스인 테이블\n",
+    "    # pivot_table = schedule.pivot_table(index='운전자', columns=['날짜', '시간'], aggfunc=len, fill_value='')\n",
+    "    # 날짜 순서대로 열 정렬\n",
+    "    pivot_table = pivot_table.sort_index(axis=1, level=[0, 1])\n",
+    "\n",
+    "    # 새로운 엑셀 파일로 저장\n",
+    "    return pivot_table\n",
+    "\n",
+    "# 달력 형식으로 변환\n",
+    "calendar_format2 = create_calendar_excel_format2(schedule)\n",
+    "\n",
+    "sorted_calendar_format = calendar_format2.apply(lambda x: sorted(x))\n",
+    "\n",
+    "print(sorted_calendar_format)\n",
+    "\n",
+    "# 파일 경로 지정\n",
+    "output_path = r'C:\\Users\\user\\poi\\PoiTransport\\달력배차표2.xlsx'\n",
+    "\n",
+    "# 새로운 워크북 생성\n",
+    "wb = Workbook()\n",
+    "ws = wb.active\n",
+    "ws.title = \"배차 시간표\"\n",
+    "\n",
+    "# 달력 데이터 추가\n",
+    "calendar_columns = sorted_calendar_format.columns\n",
+    "L = len(calendar_columns)\n",
+    "print(L)\n",
+    "for i in range(L//28):  ## 14일 매일 오전 오후 = 14*2 \n",
+    "    tmp_df = sorted_calendar_format[calendar_columns[i*28:(i+1)*28]]\n",
+    "    for r in dataframe_to_rows(tmp_df, index=True, header=True):\n",
+    "        ws.append(r)\n",
+    "    ws.append([])\n",
+    "tmp_df = sorted_calendar_format[calendar_columns[(L//28)*28:]]\n",
+    "for r in dataframe_to_rows(tmp_df, index=True, header=True):\n",
+    "    ws.append(r)\n",
+    "\n",
+    "# 스타일 정의\n",
+    "center_aligned_text = Alignment(horizontal='center', vertical='center')\n",
+    "bold_font = Font(bold=True)\n",
+    "red_font = Font(color=\"FF0000\", bold=True)\n",
+    "\n",
+    "# 스타일 적용\n",
+    "max_index = sorted_calendar_format.index.__len__()  ## 최대 순번\n",
+    "\n",
+    "for i, column in enumerate(sorted_calendar_format.columns, start=0):\n",
+    "    # 셀 지정\n",
+    "    date = column[0]\n",
+    "    day_cell = ws.cell(row= 3 + (max_index + 5)*(i//28), column= 2 + (2*(i//2))%28)\n",
+    "    weekday_cell = ws.cell(row= 4 + (max_index + 5)*(i//28), column = 2 + (2*(i//2))%28)\n",
+    "\n",
+    "    if date.weekday() >= 5:  # 5: 토요일, 6: 일요일\n",
+    "        day_cell.font = red_font\n",
+    "        weekday_cell.font = red_font\n",
+    "\n",
+    "    else:\n",
+    "        day_cell.font = bold_font\n",
+    "        weekday_cell.font = bold_font\n",
+    "\n",
+    "    #셀 스타일 적용\n",
+    "    for j in range(1,1 + max_index + 5):  ## 5:(일,요일,시간,순번빈칸) , 14일 매일 오전 오후 = 14*2 \n",
+    "        cell = ws.cell(row= j + (max_index + 5)*(i//28), column = 2 + i%28) \n",
+    "        cell.alignment = center_aligned_text\n",
+    "    \n",
+    "    #순번셀 정렬\n",
+    "    if(i%28 == 0):\n",
+    "        for j in range(1,1 + max_index + 5):  ## 5:(일,요일,시간,순번빈칸), 14일 매일 오전 오후 = 14*2 \n",
+    "            cell = ws.cell(row= j + (max_index + 5)*(i//28), column = 1) \n",
+    "            cell.alignment = center_aligned_text\n",
+    "\n",
+    "\n",
+    "# 열 너비 조정\n",
+    "for col in range(1, 8):\n",
+    "    ws.column_dimensions[get_column_letter(col)].width = 12\n",
+    "\n",
+    "# 엑셀 파일로 저장\n",
+    "wb.save(output_path)\n",
+    "\n",
+    "print(\"달력 형식의 배차 시간표22가 성공적으로 생성되었습니다.\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -442,17 +602,66 @@
     "    return pd.DataFrame(time_slots)\n",
     "\n",
     "# 시작 날짜와 기간 설정\n",
-    "start_date = datetime.date(2024, 8, 20)\n",
-    "days = 50  # 예: 50일 동안의 근무 시간 생성\n",
+    "start_date = datetime.date(2024, 9, 1)\n",
+    "days = 31  # 예: 50일 동안의 근무 시간 생성\n",
     "\n",
     "# 근무 시간 정보 생성\n",
     "time_slots_df = generate_time_slots(start_date, days)\n",
     "\n",
     "# 엑셀 파일로 저장\n",
-    "output_path = r'C:\\Users\\user\\PoiTransport\\근무시간정보.xlsx'\n",
+    "output_path = r'C:\\Users\\user\\poi\\PoiTransport\\근무시간정보.xlsx'\n",
     "time_slots_df.to_excel(output_path, index=False)\n",
     "\n",
     "print(\"근무 시간 정보가 성공적으로 생성되었습니다.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\user\\.conda\\envs\\POI_TRANSPORT\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## designer 실행방법: 터미널에 qt5-tools designer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Qt Designer path: C:/Users/user/.conda/envs/poi_transport/lib/site-packages/PyQt5/Qt5/bin\\designer.exe\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "from PyQt5.QtCore import QLibraryInfo\n",
+    "\n",
+    "designer_path = os.path.join(QLibraryInfo.location(QLibraryInfo.BinariesPath), \"designer.exe\")\n",
+    "print(\"Qt Designer path:\", designer_path)"
    ]
   }
  ],
@@ -472,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
